--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/Output/Localizations.vi.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/Output/Localizations.vi.resx
@@ -168,5 +168,14 @@
   <data name="NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC" xml:space="preserve">
     <value>Đơn vị mục tiêu</value>
   </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_TITLE" xml:space="preserve">
+    <value>Chuyển đổi đơn vị</value>
+  </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_DESC" xml:space="preserve">
+    <value>Chuyển đổi từ đơn vị này sang đơn vị khác</value>
+  </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_BODY" xml:space="preserve">
+    <value>Bạn có thể dễ dàng chuyển đổi từ đơn vị này sang đơn vị khác bằng cách chọn nhóm đơn vị (chẳng hạn như khối lượng hoặc áp suất), sau đó chọn đơn vị nguồn và đơn vị đích (chẳng hạn như gam sang kilôgam, hoặc từ milimét thủy ngân sang hectopascal) trong khung thứ hai. Sau đó, nhấn F1 để bắt đầu quá trình chuyển đổi.</value>
+  </data>
 
 </root>
