--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/arb-T.json
@@ -99,6 +99,18 @@
     {
       "loc": "NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC",
       "text": "الوحدة المستهدفة"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_TITLE",
+      "text": "تحويل الوحدات"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_DESC",
+      "text": "التحويل من وحدة إلى أخرى"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_BODY",
+      "text": "يمكنك التحويل بسهولة من وحدة إلى أخرى باختيار مجموعة الوحدات (مثل الكتلة أو الضغط)، ثم وحدتي المصدر والهدف (مثل تحويل الغرام إلى كيلوغرام، أو من مليمتر زئبق إلى هكتوباسكال) في الجزء الثاني. بعد ذلك، اضغط على F1 لبدء عملية التحويل."
     }
   ]
 }
