--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/grk.json
@@ -74,6 +74,18 @@
     {
       "loc": "NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC",
       "text": "Μονάδα στόχου"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_TITLE",
+      "text": "Μετατροπή μονάδων"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_DESC",
+      "text": "Μετατροπή από μονάδα σε μονάδα"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_BODY",
+      "text": "Μπορείτε εύκολα να μετατρέψετε από μονάδα σε μονάδα επιλέγοντας την ομάδα μονάδων (όπως μάζα ή πίεση) και, στη συνέχεια, την πηγή και τη μονάδα-στόχο (όπως γραμμάρια σε κιλά ή από χιλιοστά υδραργύρου σε εκτοπασκάλ) στο δεύτερο παράθυρο. Στη συνέχεια, πατήστε F1 για να ξεκινήσετε τη διαδικασία μετατροπής."
     }
   ]
 }
