--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/ptg.json
@@ -83,6 +83,18 @@
     {
       "loc": "NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC",
       "text": "Unidade alvo"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_TITLE",
+      "text": "Conversão de unidades"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_DESC",
+      "text": "Conversão de unidade para unidade"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_BODY",
+      "text": "Pode converter facilmente de uma unidade para outra, seleccionando o grupo de unidades (como massa ou pressão), depois a unidade de origem e a unidade de destino (como gramas para quilogramas ou de milímetros de mercúrio para hectopascais) no segundo painel. Em seguida, prima F1 para iniciar o processo de conversão."
     }
   ]
 }
