--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/ukr.json
@@ -73,6 +73,18 @@
     {
       "loc": "NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC",
       "text": "Цільова одиниця"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_TITLE",
+      "text": "Перетворення одиниць вимірювання"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_DESC",
+      "text": "Перетворення з одиниці в одиницю"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_BODY",
+      "text": "Ви можете легко перетворити з одиниці в одиницю, вибравши групу одиниць (наприклад, масу або тиск), потім вихідну та цільову одиниці вимірювання (наприклад, грами в кілограми або з міліметрів ртутного стовпа в гектопаскалі) на другій панелі. Після цього натисніть F1, щоб розпочати процес перетворення."
     }
   ]
 }
