--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/Output/Localizations.ar.resx
@@ -168,5 +168,14 @@
   <data name="NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC" xml:space="preserve">
     <value>الوحدة المستهدفة</value>
   </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_TITLE" xml:space="preserve">
+    <value>تحويل الوحدات</value>
+  </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_DESC" xml:space="preserve">
+    <value>التحويل من وحدة إلى أخرى</value>
+  </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_BODY" xml:space="preserve">
+    <value>يمكنك التحويل بسهولة من وحدة إلى أخرى باختيار مجموعة الوحدات (مثل الكتلة أو الضغط)، ثم وحدتي المصدر والهدف (مثل تحويل الغرام إلى كيلوغرام، أو من مليمتر زئبق إلى هكتوباسكال) في الجزء الثاني. بعد ذلك، اضغط على F1 لبدء عملية التحويل.</value>
+  </data>
 
 </root>
