--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/Output/Localizations.pt-BR.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/Output/Localizations.pt-BR.resx
@@ -168,5 +168,14 @@
   <data name="NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC" xml:space="preserve">
     <value>Unidade alvo</value>
   </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_TITLE" xml:space="preserve">
+    <value>Conversão de unidades</value>
+  </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_DESC" xml:space="preserve">
+    <value>Convertendo de unidade para unidade</value>
+  </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_BODY" xml:space="preserve">
+    <value>Você pode converter facilmente de uma unidade para outra selecionando o grupo de unidades (como massa ou pressão), depois a unidade de origem e a unidade de destino (como gramas para quilogramas ou de milímetros de mercúrio para hectopascais) no segundo painel. Em seguida, pressione F1 para iniciar o processo de conversão.</value>
+  </data>
 
 </root>
