--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/Output/Localizations.tr.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/Output/Localizations.tr.resx
@@ -168,5 +168,14 @@
   <data name="NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC" xml:space="preserve">
     <value>Hedef birim</value>
   </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_TITLE" xml:space="preserve">
+    <value>Birim dönüştürme</value>
+  </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_DESC" xml:space="preserve">
+    <value>Birimden birime dönüştürme</value>
+  </data>
+  <data name="NKS_UNITCONV_CLI_HELP01_BODY" xml:space="preserve">
+    <value>İkinci bölmede birim grubunu (kütle veya basınç gibi), ardından kaynak ve hedef birimi (gramdan kilograma veya milimetre cıvadan hektopaskala gibi) seçerek birimden birime kolayca dönüştürme yapabilirsiniz. Ardından, dönüştürme işlemini başlatmak için F1 tuşuna basın.</value>
+  </data>
 
 </root>
