--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/dtc.json
@@ -79,6 +79,18 @@
     {
       "loc": "NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC",
       "text": "Doeleenheid"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_TITLE",
+      "text": "Eenheden omrekenen"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_DESC",
+      "text": "Omrekenen van eenheid naar eenheid"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_BODY",
+      "text": "U kunt eenvoudig van eenheid naar eenheid omrekenen door de eenhedengroep (zoals massa of druk) te selecteren en vervolgens de bron- en doeleenheid (zoals gram naar kilogram, of van millimeter kwik naar hectopascal) in het tweede venster. Druk vervolgens op F1 om het omrekenproces te starten."
     }
   ]
 }
