--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/ind.json
@@ -73,6 +73,18 @@
     {
       "loc": "NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC",
       "text": "lakshy ikaee"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_TITLE",
+      "text": "yoonit kanvarzan"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_DESC",
+      "text": "ek yoonit se doosaree yoonit mein kanvart karana"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_BODY",
+      "text": "aap doosare pen mein yoonit grup (jaise maas ya preshar), phir sors aur taaraget yoonit (jaise graam se kilograam, ya mileemeetar of marakaree se hektopaaskal) chunakar aasaanee se ek yoonit se doosaree yoonit mein kanvart kar sakate hain. isake baad, kanvarzan proses shuroo karane ke lie f1 dabaen."
     }
   ]
 }
