--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/jpn.json
@@ -73,6 +73,18 @@
     {
       "loc": "NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC",
       "text": "対象ユニット"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_TITLE",
+      "text": "単位変換"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_DESC",
+      "text": "単位間の変換"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_BODY",
+      "text": "単位グループ（質量や圧力など）を選択し、2番目のペインで変換元と変換先の単位（グラムからキログラム、ミリメートル水銀柱からヘクトパスカルなど）を選択することで、簡単に単位を変換できます。その後、F1キーを押して変換処理を開始します。"
     }
   ]
 }
