--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Resources/Languages/kor-T.json
@@ -74,6 +74,18 @@
     {
       "loc": "NKS_UNITCONV_COMMAND_UNITCONV_ARGUMENT_TARGETUNIT_DESC",
       "text": "타겟 유닛"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_TITLE",
+      "text": "단위 변환"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_DESC",
+      "text": "단위 간 변환"
+    },
+    {
+      "loc": "NKS_UNITCONV_CLI_HELP01_BODY",
+      "text": "단위 그룹(예: 질량 또는 압력)을 선택한 다음, 두 번째 창에서 원본 및 대상 단위(예: 그램에서 킬로그램으로, 밀리미터 수은주에서 헥토파스칼로)를 선택하여 단위 간을 쉽게 변환할 수 있습니다. 그런 다음 F1 키를 눌러 변환 과정을 시작하세요."
     }
   ]
 }
